--- a/templates/index.html
+++ b/templates/index.html
@@ -74,27 +74,27 @@
 
 <div class="main-img">
   <img src="static/images/Main.png" alt="main-img" width="350">
-</div>
+</div>  
 
 <div class="center">
-  <h1>Welcome to,<br> Attendance System</h1>
+  <h1><b>Welcome to,<br> Attendance System</b></h1>
   <a class="btn btn-primary" href="/login">Login</a>
-  <a href="/logout">{{ display_logout }}</a>
+  <a href="/logout">{{display_logout}}</a>
 </div>
 
 <div class="middle">
-  <h2>Features</h2>
+  <h2><b>Features</b></h2>
   <ul class="list">
     <li class="items">Good And Accurate</li>
-    <li class="items">Good And Accurate</li>
-    <li class="items">Good And Accurate</li>
-    <li class="items">Good And Accurate</li>
+    <li class="items">Liveness Detection</li>
+    <li class="items">Accuracy upto 90%</li>
+    <li class="items">Attendance Marking</li>
     
   </ul>  
 </div>
 
 <div class="examples">
-  <h3><u>Snapshot</u></h3>
+  <h3><b><u>Snapshot</u></b></h3>
   <img src="static/images/snap1.png" alt="Attendance Demo" id="snap1">
   <img src="static/images/snap2.png" alt="Recognition Demo" id="snap2">
 </div>
