--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,6 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Attendance System</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,25 +33,24 @@
                     <a class="nav-link" href="/records" >
                         Records
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Daily</a>
-                        <a class="dropdown-item" href="#">Weekly</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Monthly</a>
-                    </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact">Contact</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/register">Register</a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/attendance">Attendance</a>
+                </li>
+
             </ul>
         </div>
     </nav>
-    {% block BodyHomePage %}
-    {% endblock BodyHomePage%}
+    {% block BodyHomePage %}    {% endblock BodyHomePage%}
 
-    {% block DataRecords %}
-    
-    {% endblock DataRecords %}
+    {% block register %}    {% endblock register %}
+
+    {% block DataRecords %}   {% endblock DataRecords %}
+
+    {% block dashboard %}   {% endblock dashboard %}
 </body>
 
 </html>
