Recognize & save attendance, May17

--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -36,9 +36,9 @@
                 <th scope="row">{{forloop.counter}}</th>
                     <td>{{i.name}}</td>
                     <td>{{i.roll_no}}</td>
-                    <td>{{i.email}}</td>
-                    <td>{{i.department}}</td>
-                </tr>
+                    <td>{{i.date}}</td>
+                    <td>{{i.status}}</td>
+                </tr>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
             {% endfor %}
             <tr>
             
