--- a/templates/registeration.html
+++ b/templates/registeration.html
@@ -88,7 +88,7 @@
     {% csrf_token %}
     <h1>Register:</h1>
     <!-- One "tab" for each step in the form: -->
-    <div class="tab">Name & Roll No:
+    <div class="tab">Name:
       <p><input type="text" placeholder="Full Name" oninput="this.className = ''" name="name"></p>
       <p>Roll No<input type="number" placeholder="Roll No" oninput="this.className = ''" name="roll_no"></p>
     </div>
