--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,10 @@
     <title>Attendance System</title>
     {% block style %}   {% endblock style %} 
 
+    {% block login_head %}
+
+    {% endblock login_head %}
+
 </head>
 
 <body>
@@ -51,6 +55,8 @@
     {% block DataRecords %}   {% endblock DataRecords %}
 
     {% block dashboard %}   {% endblock dashboard %}
+
+    {% block login %} {% endblock login %}
 </body>
 
 </html>
