--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,10 @@
 
     {% endblock login_head %}
 
+    {% block styleFeed %}
+
+    {% endblock styleFeed %}
+
 </head>
 
 <body>
@@ -45,6 +49,10 @@
                     <a class="nav-link" href="/attendance">Attendance</a>
                 </li>
 
+                <li class="nav-item active">
+                    <a class="nav-link" href="/feed">Feed</a>
+                </li>
+
             </ul>
         </div>
     </nav>
@@ -57,6 +65,8 @@
     {% block dashboard %}   {% endblock dashboard %}
 
     {% block login %} {% endblock login %}
+    
+    {% block FeedPage %} {% endblock FeedPage %}
 </body>
 
 </html>
