--- a/templates/index.html
+++ b/templates/index.html
@@ -1,141 +1,193 @@
-{% extends 'base.html' %} 
-{% block style %}
+{% extends 'base.html' %} {% block style %}
 <style>
-  
   .center {
-    margin: auto;
-    width: 90%;
-    padding: 80px;
-  
+    position: absolute;
+    width: 492px;
+    height: 100px;
+    left: 109px;
+    top: 220px;
+
+    /* Desktop / Display Medium */
+
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 50px;
+    /* or 104% */
+
+    display: flex;
+    align-items: center;
+    letter-spacing: 1px;
+
+    /* Primary / Default */
+
+    color: #5f2eea;
   }
 
-  .main-img{
-    /* {% comment %} margin: 
-    
+  .main-img {
     position: absolute;
-    width: 38%;
-    left: 650px;
-    top: 60px;
-    border-radius: 20px; {% endcomment %} */
-    width: 400px;
-    position: absolute;
-    right:20px;
-    left: 68%;
+    width: 619px;
+    height: 705px;
+    left: 720px;
+    top: 57px;
+
+    background: #FFFFFF;
+    /* Drop Shadow Large */
+
+    box-shadow: 0px 32px 64px rgba(17, 17, 17, 0.08);
     border-radius: 20px;
-    border: 3px solid rgba(0, 0, 255, 0.592);
   }
 
-  .middle{
-    color: white;
-    background-color: rgba(0, 0, 0, 0.905);
-    padding-bottom: 60px;
+  .middle {
+    position: absolute;
+    width: 276px;
+    height: 152px;
+    left: 100px;
+    top: 570px;
+
+    /* Desktop / Text Large */
+
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 38px;
+    /* or 158% */
+
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.75px;
+
+    /* Primary / Default */
+
+    color: #5F2EEA;
+
   }
 
-  .middle h2{
-    padding-top:40px ;
-    padding-bottom: 20px;
-    /* border: 3px solid blue; */
-    margin: auto;
+  
+  #login {
+    position: absolute;
+    width: 200px;
+    height: 64px;
+    left: 107px;
+    top: 369px;
+
+    /* Drop Shadow Large */
+
+  }
+
+  #login p{
+    border: 2px solid #5F2EEA;
+    border-radius: 40px;
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+
+    width: 161px;
+    padding-top: 0px;
+    padding-left: 45px;
+    padding-right: 45px;
+    padding-bottom: 0px;
+
+    /* Desktop / Link Small */
+
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 28px;
+    /* or 175% */
+
+    display: flex;
+    align-items: center;
     text-align: center;
-    font-size: 40px;
+    letter-spacing: 0.75px;
+
+    /* Grayscale / Background */
+    background: #5F2EEA;
+    color: #F7F7FC;
+
   }
 
-  .middle li{
-    margin-left: 40px;
-    margin-bottom: 10px;
-    padding-left: 34px;
-    width: 40%;
-    /* border: 3px solid blue; */
+  #signup {
+    box-sizing: border-box;
+    border-radius: 40px;
+    position: absolute;
+    width: 200px;
+    height: 64px;
+    left: 280px;
+    top: 369px;
+
+    
   }
 
-  .items{
-    /* border: 3px solid green; */
-    width: 60%;
-    font-size: 30px;
-    top: 50px;
-    left: 30px;
-    position: relative;
-  }
+  #signup p{
+    border: 2px solid #5F2EEA;
+    border-radius: 40px;
+    position: absolute;
+    left: 5%;
+    right: 5%;
+    top: 0%;
+    bottom: 0%;
+    width: 161px;
+    padding-top: 0px;
+    padding-left: 45px;
+    padding-right: 45px;
+    padding-bottom: 0px;
+    /* Desktop / Link Small */
 
-  .items-1{
-    /* border: 3px solid blue; */
-    font-size: 30px;
-    left: 600px;
-    bottom: 60px;
-    margin-left: 20px;
-    padding-left: 40px;
-    position: relative;
-  }
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 28px;
+    /* or 175% */
 
-  .examples{
-    background-color: white;
-    padding-bottom: 30px;
-    margin: auto;
-    padding-top: 20px;
-  }
-
-  .examples h3{
+    display: flex;
+    align-items: center;
     text-align: center;
-    padding-bottom: 10px ;
-    margin-bottom: 20px;
-    font-size: 40px;
+    letter-spacing: 0.75px;
+
+    /* Primary / Default */
+
+    color: #5F2EEA;
+   
   }
 
-  #snap1{
-    margin-left: 38px;
-    height: 340px;
-    border: 3px solid green;
-  }
 
-  #snap2{
-    border: 3px solid orange;
-    margin-left: 40px;
-    margin-right: auto;
-    height: 340px;
-  }
-
-  .footer{
-    background-color: black;
-    color: white;
-    text-align: center;
-  }
 </style>
-{% endblock style %} 
+{% endblock style %}
 
 {% block BodyHomePage %}
-<div class="body">
-  <div class="main-img-div">
-    <img class="main-img" src="static/images/Main.png" alt="main-img" >
-  </div>  
-  
-  <div class="center">
-    <h1><b>Welcome to,<br> Attendance System</b></h1>
-    <a class="btn btn-primary" href="/login">Login</a>
-    <a href="/logout">{{display_logout}}</a>
-  </div>
-  
-  <div class="middle">
-    <h2><b>Features</b></h2>
-    <ul class="list">
-      <li class="items">Good And Accurate</li>
-      <li class="items">Liveness Detection</li>
-      <li class="items-1">Accuracy upto 90%</li>
-      <li class="items-1">Attendance Marking</li>
-      
-    </ul>  
-  </div>
-  
-  <div class="examples">
-    <h3><b><u>Snapshot</u></b></h3>
-    <img src="static/images/snap1.png" alt="Attendance Demo" id="snap1">
-    <img src="static/images/snap2.png" alt="Recognition Demo" id="snap2">
-  </div>
-  
+<div class="main-img-div">
+  <img class="main-img" src="static/images/Frame.png" alt="main-img" />
 </div>
-<footer class="footer">
-  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2021 Copyright:
-    <a class="text-reset fw-bold" href="https://veerdavlog.blogspot.com/">Veer</a>
-  </div>
-</footer>
+
+<div class="center">
+  <h1>
+    <b>Welcome to,<br />
+      Attendance System</b>
+  </h1>
+</div>
+
+<div class="buttons">
+  <a id="login" href="/login"><p>Login</p></a>
+  
+  <a id="signup" href="/register"><p>Sign Up</p></a>
+  <a id="logout" href="/logout">{{display_logout}}</a>
+</div>
+
+<div class="middle">
+
+  <ul class="list">
+    <li class="items">Good And Accurate</li>
+    <li class="items">Liveness Detection</li>
+    <li class="items-1">Accuracy upto 90%</li>
+    <li class="items-1">Attendance Marking</li>
+  </ul>
+</div>
+
 {% endblock BodyHomePage %}
