--- a/templates/index.html
+++ b/templates/index.html
@@ -163,7 +163,7 @@
 
 {% block BodyHomePage %}
 <div class="main-img-div">
-  <img class="main-img" src="FaceImages/Frame.png" alt="main-img" />
+  <img class="main-img" src="/FaceImages/Frame.png" alt="main-img" />
 </div>
 
 <div class="center">
