--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -163,7 +163,7 @@
 
 {% block BodyHomePage %}
 <div class="main-img-div">
-  <img class="main-img" src="/static/Images/Frame.png" alt="main-img" />
+  <img class="main-img" src="home\static\images\Frame.png" alt="main-img" />
 </div>
 
 <div class="center">
