--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -163,7 +163,8 @@
 
 {% block BodyHomePage %}
 <div class="main-img-div">
-  <img class="main-img" src="staticfiles\images\Frame.png" alt="main-img" />
+  {% load static %}
+  <img class="main-img" src="{% static 'Images/Frame.png' %}" alt="main-img" />
 </div>
 
 <div class="center">
