--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -164,7 +164,7 @@
 {% block BodyHomePage %}
 <div class="main-img-div">
   {% load static %}
-  <img class="main-img" src="{% static 'Images/Frame.png' %}" alt="main-img" />
+  <img class="main-img" src="{% static 'images/Frame.png' %}" alt="main-img" />
 </div>
 
 <div class="center">
