--- a/home/templates/registeration.html
+++ b/home/templates/registeration.html
@@ -4,7 +4,6 @@
 <style>
   * {
     box-sizing: border-box;
-    
   }
   
   body {
@@ -12,7 +11,7 @@
   }
   
   #regForm {
-    border: 2px solid green;
+    border: 2px solid #2A00A2;
     background-color: #ffffff;
     margin: 70px auto;
     font-family: Raleway;
@@ -22,7 +21,8 @@
   }
   
   h1 {
-    text-align: center;  
+    text-align: left;  
+    color: #2A00A2;
   }
   
   input {
@@ -41,10 +41,11 @@
   /* Hide all steps by default: */
   .tab {
     display: none;
+    color: #15aa73;
   }
   
   button {
-    background-color: #04AA6D;
+    background-color: #2A00A2;
     color: #ffffff;
     border: none;
     padding: 10px 20px;
@@ -81,12 +82,14 @@
   .step.finish {
     background-color: #04AA6D;
   }
+  
   </style>
   <body>
   
   <form id="regForm" method="POST" action="/register">
     {% csrf_token %}
-    <h1>Register:</h1>
+    <h1>Sign Up:</h1>
+    <p>Fill up with accurate information to avoid errors</p>
     <!-- One "tab" for each step in the form: -->
     <div class="tab">Name:
       <p><input type="text" placeholder="Full Name" oninput="this.className = ''" name="name"></p>
@@ -114,6 +117,11 @@
       <span class="step"></span>
       <span class="step"></span>
       <span class="step"></span>
+    </div>
+
+    <div class="already">
+      <p>Already have an account?</p>
+      <a id="login" href="/login"><p>Login</p></a>
     </div>
   </form>
   
