--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -51,7 +51,7 @@
     font-family: Poppins;
     font-style: normal;
     font-weight: normal;
-    font-size: 24px;
+    font-size: 21px;
     line-height: 38px;
     /* or 158% */
 
@@ -134,8 +134,8 @@
     bottom: 0%;
     width: 161px;
     padding-top: 0px;
-    padding-left: 45px;
-    padding-right: 45px;
+    padding-left: 40px;
+    padding-right: 40px;
     padding-bottom: 0px;
     /* Desktop / Link Small */
 
@@ -184,10 +184,10 @@
 <div class="middle">
 
   <ul class="list">
-    <li class="items">Good And Accurate</li>
+    <li class="items">Fast And Accurate</li>
     <li class="items">Liveness Detection</li>
     <li class="items-1">Accuracy upto 90%</li>
-    <li class="items-1">Attendance Marking</li>
+    <li class="items-1">Real-Time Data</li>
   </ul>
 </div>
 
