--- a/home/templates/registeration.html
+++ b/home/templates/registeration.html
@@ -11,11 +11,12 @@
   }
   
   #regForm {
-    border: 2px solid #2A00A2;
+    border: 1px solid #15aa73;
     background-color: #ffffff;
     margin: 70px auto;
     font-family: Raleway;
     padding: 40px;
+    padding-bottom: 3px;
     width: 70%;
     min-width: 300px;
   }
@@ -83,6 +84,13 @@
     background-color: #04AA6D;
   }
   
+  .already{
+    padding-left: 310px;
+    padding-top: 4px;
+    padding-right: 300px;
+  }
+  
+
   </style>
   <body>
   
@@ -120,8 +128,8 @@
     </div>
 
     <div class="already">
-      <p>Already have an account?</p>
-      <a id="login" href="/login"><p>Login</p></a>
+      <p>Already have an account?
+      <a id="login" href="/login">Login</a></p>
     </div>
   </form>
   
